--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SberConvert</string>
-    <string name="fetch_error">An error was encountered while doing IO</string>
+    <string name="fetch_error">Не удалось загрузить новые курсы с сервера. Загрузим сатрые из кеши</string>
     <string name="parser_error_message">A error was encountered while parsing XML</string>
     <string name="button_caption">Конвертировать</string>
     <string name="from_prompt">Выберите исходный валют</string>
